--- a/indexTest.html
+++ b/indexTest.html
@@ -315,6 +315,22 @@
         </div>
       </section>
 
+      <!-- === Highlight: Studiogast Nina Scheer === -->
+      <section class="card" style="border-left:6px solid #0a7d32; padding:18px 20px; background:#f9fafb; border-radius:16px; box-shadow:0 3px 12px rgba(0,0,0,.06);">
+        <h2 style="margin-top:0;">Heute Abend im Studio</h2>
+        <p>
+          <strong>Dr. Nina Scheer (SPD)</strong> – energiepolitische Sprecherin der Bundestagsfraktion –
+          im Gespräch über den Ausstieg aus Erdgas-Strom und den beschleunigten Ausbau von Solarenergie in Bürgerhand.
+        </p>
+        <p style="margin:12px 0 0;">
+          <a href="https://www.lebenmitderenergiewende.de/live" target="_blank" rel="noopener"
+             style="display:inline-block; background:#0a7d32; color:#fff; text-decoration:none; font-weight:700; padding:10px 16px; border-radius:10px;">
+             🎥 Livestream ansehen
+          </a>
+        </p>
+      </section>
+      <!-- === /Highlight Ende === -->
+
       <!-- Aktuelle Sendung -->
       <section id="sendung">
         <h2 class="section-title">Der Kampagnenstart</h2>
@@ -565,6 +581,7 @@
   </script>
 </body>
 </html>
+
 
 
 
