--- a/indexTest.html
+++ b/indexTest.html
@@ -323,7 +323,7 @@
           im Gespräch über den Ausstieg aus Erdgas-Strom und den beschleunigten Ausbau von Solarenergie in Bürgerhand.
         </p>
         <p style="margin:12px 0 0;">
-          <a href="https://www.lebenmitderenergiewende.de/live" target="_blank" rel="noopener"
+          <a href="https://#" target="_blank" rel="noopener"
              style="display:inline-block; background:#0a7d32; color:#fff; text-decoration:none; font-weight:700; padding:10px 16px; border-radius:10px;">
              🎥 Livestream ansehen
           </a>
@@ -581,6 +581,7 @@
   </script>
 </body>
 </html>
+
 
 
 
