--- a/index-full.html
+++ b/index-full.html
@@ -3,6 +3,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Solarstrom statt Erdgas-Strom – Brief einreichen</title>
+  <!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Solarstrom statt Erdgas-Strom – Info & Mitmachen">
+<meta property="og:description" content="Alle Infos zur Kampagne: Ziele, Hintergründe, Materialien und Mitmach-Möglichkeiten.">
+<meta property="og:url" content="https://www.aktionsolarstrom.de/">
+<meta property="og:image" content="https://www.aktionsolarstrom.de/assets/SocialCard.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<!-- Twitter (X) Fallback -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Solarstrom statt Erdgas-Strom – Info & Mitmachen">
+<meta name="twitter:description" content="Alle Infos zur Kampagne: Ziele, Hintergründe, Materialien und Mitmach-Möglichkeiten.">
+<meta name="twitter:image" content="https://www.aktionsolarstrom.de/assets/SocialCard.jpg">
+
   <meta name="description" content="Reichen Sie Ihren Brief ein – wir drucken, kuvertieren und versenden physisch an die zuständige Bundestagsabgeordnete.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
@@ -752,6 +767,7 @@ Mit freundlichen Grüßen
 
 </body>
 </html>
+
 
 
 
