--- a/Impressum.html
+++ b/Impressum.html
@@ -4,6 +4,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Impressum – Solarstrom statt Erdgas-Strom</title>
+  <!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Solarstrom statt Erdgas-Strom – Info & Mitmachen">
+<meta property="og:description" content="Alle Infos zur Kampagne: Ziele, Hintergründe, Materialien und Mitmach-Möglichkeiten.">
+<meta property="og:url" content="https://www.aktionsolarstrom.de/">
+<meta property="og:image" content="https://www.aktionsolarstrom.de/assets/SocialCard.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<!-- Twitter (X) Fallback -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Solarstrom statt Erdgas-Strom – Info & Mitmachen">
+<meta name="twitter:description" content="Alle Infos zur Kampagne: Ziele, Hintergründe, Materialien und Mitmach-Möglichkeiten.">
+<meta name="twitter:image" content="https://www.aktionsolarstrom.de/assets/SocialCard.jpg">
+
   <meta name="description" content="Impressum der Kampagne Solarstrom statt Erdgas-Strom – getragen von Leben mit der Energiewende, VEEG und Energy Watch Group. Diensteanbieter: Media International Bader.">
   <style>
     :root{ --maxw: 920px; --brand:#0a7c5b; --ink:#111; --muted:#6b7280; --border:#e5e7eb; }
@@ -109,3 +124,4 @@
   </div>
 </body>
 </html>
+
