--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -140,7 +140,42 @@
         <p>Wir speichern deine Daten nur so lange, wie es für die Abwicklung des Postversands und für einen kurzen Nachweiszeitraum (ca. 90 Tage) erforderlich ist. Danach werden sie gelöscht oder anonymisiert, soweit keine gesetzlichen Aufbewahrungspflichten entgegenstehen.</p>
 
         <h2>7. Rechte</h2>
-        <p>Du hast nach DSGVO das Recht auf Auskunft, Berichtigung, Löschung, Einschränkung der Verarbeitung, Datenübertragbarkeit und Widerspruch. Außerdem das Recht,
+        <p>Du hast nach DSGVO das Recht auf Auskunft, Berichtigung, Löschung, Einschränkung der Verarbeitung, Datenübertragbarkeit und Widerspruch. Außerdem das Recht, erteilte Einwilligungen jederzeit zu widerrufen. Wende dich dazu an <a href="mailto:mucmib@googlemail.com">mucmib@googlemail.com</a>. Zudem besteht ein Beschwerderecht bei einer Datenschutzaufsichtsbehörde.</p>
+
+        <h2>8. Sicherheit & Cookies</h2>
+        <ul>
+          <li>Unsere Seite wird verschlüsselt über TLS/HTTPS ausgeliefert.</li>
+          <li>Es werden nur technisch notwendige Cookies eingesetzt; kein Drittanbieter-Tracking.</li>
+          <li>Zum Schutz vor Missbrauch können wir Captcha- oder Rate-Limit-Mechanismen einsetzen.</li>
+        </ul>
+
+        <h2>9. Änderungen</h2>
+        <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, wenn sich gesetzliche Vorgaben oder technische Änderungen ergeben. Die jeweils aktuelle Version ist immer hier abrufbar.</p>
+
+        <hr>
+        <p class="muted">Hinweis: Diese Erklärung wurde auf die Kampagne „Solarstrom statt Erdgas-Strom“ zugeschnitten. Bitte überprüfe sie regelmäßig und ergänze ggf. Details zu Speicherfristen oder AV-Verträgen.</p>
+      </section>
+    </main>
+
+    <footer class="middle">
+      <p class="legal">
+        <a href="https://www.aktionsolarstrom.de/">Startseite</a>
+        · <a href="Datenschutz.html" aria-current="page">Datenschutz</a>
+        · <a href="Impressum.html">Impressum</a>
+      </p>
+      <p class="muted">Eine Kampagne von Leben mit der Energiewende, VEEG und Energy Watch Group · Diensteanbieter: Media International Bader</p>
+      <p class="muted">© Media International Bader</p>
+    </footer>
+  </div>
+
+  <script>
+    document.getElementById('last-updated').textContent =
+      new Date().toLocaleDateString('de-DE',{year:'numeric',month:'2-digit',day:'2-digit'});
+  </script>
+</body>
+</html>
+
+
 
 
 
